# knut

./: ProjectHome.md
knutclient4/: README  knutclient.kdevses  knutclient.lsm  knutclient.notifyrc  maketar.sh
knutclient4/.svn/: all-wcprops  entries
knutclient4/.svn/text-base/: CMakeLists.txt.svn-base  ChangeLog.svn-base  Messages.sh.svn-base  knutclient.desktop.svn-base  knutclient.kdevelop.filelist.svn-base  knutclient.kdevelop.pcs.svn-base  knutclient.kdevelop.svn-base  knutclient.lsm.svn-base  translation.txt.svn-base
knutclient4/doc/: CMakeLists.txt
knutclient4/doc/.svn/: all-wcprops  entries
knutclient4/doc/cs/: CMakeLists.txt  index.docbook
knutclient4/doc/cs/.svn/: all-wcprops  entries
knutclient4/doc/en/: CMakeLists.txt  index.docbook
knutclient4/doc/en/.svn/: all-wcprops  entries
knutclient4/icons/.svn/: all-wcprops  entries
knutclient4/pics/.svn/: all-wcprops  entries
knutclient4/pics/.svn/text-base/: knc_analog.png.svn-base  (+4 more)
knutclient4/po/: es.po  extract-messages.sh  fr.po  it.po  pl.po  ru.po
knutclient4/po/.svn/: all-wcprops  entries
knutclient4/src/: CMakeLists.txt  knutanalog.cpp  knutclientui.rc  knutconst.h  knutdock.h  knutfrontpanel.cpp  knutfrontpanel.h  knutinstcomms.cpp  knutinstcomms.h  knutmainwindow.cpp  knutmainwindow.h  knutnet.cpp  knutnet.h  knutprefdlg.h  knutprintupsvar.cpp  knutrwvar.cpp  knutrwvar.h  knutupsdata.cpp  knutupsdata.h  knutvardata.h  main.cpp
knutclient4/src/.svn/: all-wcprops  entries
knutclient4/src/.svn/text-base/: knutanalog.h.svn-base  knutclient.cpp.svn-base  knutclient.h.svn-base  knutdock.cpp.svn-base  knutnewupsdlg.cpp.svn-base  knutnewupsdlg.h.svn-base  knutpanelmeter.cpp.svn-base  knutpanelmeter.h.svn-base  knutprefdlg.cpp.svn-base  knutprintupsvar.h.svn-base  knutvardata.cpp.svn-base
knutclient4/templates/.svn/: all-wcprops  entries
knutclient5/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  cmake_debug  knutclient.desktop  knutclient.lsm  knutclient.notifyrc  maketar.sh  translation.txt
knutclient5/doc/cs/: CMakeLists.txt  index.docbook
knutclient5/doc/en/: CMakeLists.txt  index.docbook
knutclient5/icons/: CMakeLists.txt
knutclient5/pics/: CMakeLists.txt
knutclient5/po/: cs.po  de.po  knutclient.pot  pl.po  uk.po
knutclient5/src/: CMakeLists.txt  knutanalog.cpp  knutanalog.h  knutclient.cpp  knutclient.h  knutconst.h  knutdock.cpp  knutdock.h  knutfrontpanel.cpp  knutfrontpanel.h  knutinstcomms.cpp  knutinstcomms.h  knutmainwindow.cpp  knutmainwindow.h  knutnet.cpp  knutnet.h  knutnewupsdlg.cpp  knutnewupsdlg.h  knutpanelmeter.cpp  knutpanelmeter.h  knutprefdlg.cpp  knutprefdlg.h  knutprintupsvar.cpp  knutprintupsvar.h  knutrwvar.cpp  knutrwvar.h  knutupsdata.cpp  knutupsdata.h  knutvardata.cpp  knutvardata.h  main.cpp
knutclient5/templates/: h
knutsetting4/: AUTHORS  CMakeLists.txt  Distribution-files.ksp  INSTALL  cmake_debug  cmake_release  knutsetting.lsm  structure.flw
knutsetting4/.svn/: all-wcprops  entries
knutsetting4/.svn/text-base/: ChangeLog.svn-base  README.svn-base  dist.conf.svn-base  knutsetting.actions.svn-base  knutsetting.desktop.svn-base  maketar.sh.svn-base
knutsetting4/doc/.svn/: all-wcprops  entries
knutsetting4/icons/.svn/: all-wcprops  entries
knutsetting4/icons/.svn/text-base/: CMakeLists.txt.svn-base  hi16-app-knutsetting.png.svn-base  hi48-app-knutsetting.png.svn-base
knutsetting4/pics/: CMakeLists.txt
knutsetting4/pics/.svn/: all-wcprops  entries
knutsetting4/pics/.svn/text-base/: kns_mon.png.svn-base
knutsetting4/po/: cs.po  knutsetting.pot
knutsetting4/po/.svn/: all-wcprops  entries
knutsetting4/po/.svn/text-base/: CMakeLists.txt.svn-base  extract-messages.sh.svn-base
knutsetting4/src/: knsacl.cpp  knsacladdress.h  knsaddups.cpp  knsaddups.h  knscommondata.cpp  knscommondata.h  knsdoublelistbox.cpp  knshelper.cpp  knshelper.h  knsintlineedit.h  knsmodstdval.h  knsmodules.cpp  knsmodulesedit.cpp  knsmodusrval.cpp  knsmonitoring.cpp  knsmonitoring.h  knsmonsystems.cpp  knsmonvalues.cpp  knsmonvalues.h  knsnet.cpp  knsnet.h  knsprocesinfo.cpp  knssaxhandler.cpp  knssaxhandler.h  knsstring.cpp  knsstring.h  knsupssaxhandler.cpp  knsuseredit.cpp  knsusers.cpp  knsusers.h  knutsetting.cpp  knutsetting.h  main.cpp
knutsetting4/src/.svn/: all-wcprops  entries
knutsetting4/src/.svn/text-base/: CMakeLists.txt.svn-base  StructDesc.svn-base  knsacl.h.svn-base  knsacladdress.cpp.svn-base  knsaddparam.cpp.svn-base  knsaddparam.h.svn-base  knsdoublelistbox.h.svn-base  knsintaddress.cpp.svn-base  knsintaddress.h.svn-base  knsintlineedit.cpp.svn-base  knsmoddrivval.cpp.svn-base  knsmoddrivval.h.svn-base  knsmodstdval.cpp.svn-base  knsmodules.h.svn-base  knsmodulesedit.h.svn-base  knsmodusrval.h.svn-base  knsmonnotify.cpp.svn-base  knsmonnotify.h.svn-base  knsmonsystems.h.svn-base  knsprocesinfo.h.svn-base  knsupssaxhandler.h.svn-base  knsuseredit.h.svn-base  knsvalueedit.cpp.svn-base  knsvalueedit.h.svn-base
knutsetting4/src/.svn/tmp/: knsaddups.cpp.tmp
knutsetting4/xmlconf/: CMakeLists.txt  modules_def.xml  modules_def_old.xml
knutsetting4/xmlconf/.svn/: all-wcprops  entries
knutsetting4/xmlconf/.svn/text-base/: modules.dtd.svn-base  modules_def.xml.template.svn-base  upses.dtd.svn-base  upses_def.xml.svn-base  upses_def.xml.template.svn-base
(+15 files in other folders)
