install( FILES modules_def.xml DESTINATION ${DATA_INSTALL_DIR}/knutsetting/ ) 
install( FILES modules.dtd DESTINATION ${DATA_INSTALL_DIR}/knutsetting/ ) 
install( FILES upses_def.xml DESTINATION ${DATA_INSTALL_DIR}/knutsetting/ ) 
install( FILES upses.dtd DESTINATION ${DATA_INSTALL_DIR}/knutsetting/ ) 
